# x91

./: .replit  README.md  app.py  db.py  generating.py  main.py  pyproject.toml  requirements.txt  sending.py
static/js/: const.js  forgotpass.js  login.js  signup.js
static/stylesheet/: forgotpass.css  input.css  login.css  main.css  signup.css
templates/: forgotpassw.html  index.html  registration.html
